--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
       <div class = 'query-wrapper'>
         <label for="option1" class = 'query-option' tabindex="1">
           <input type="radio" id="option1" name="queryType" value="General Enquiry">
-          General Enquiry
+          &nbsp&nbsp&nbspGeneral Enquiry
         </label>
 
         <label for="option2" class = 'query-option' tabindex="2">
           <input type="radio" id="option2" name="queryType" value="Support Request">
-          Support Request
+          &nbsp&nbsp&nbspSupport Request
         </label>
       </div>
 
@@ -57,11 +57,9 @@
 
 
       <div class="agreement">
-        <input type="checkbox" id="consent" name="consent" value="true">
+        <input type="checkbox" id="consent" name="consent">
         <label for="consent">I consent to being contacted by the team &nbsp*</label>
       </div>
-
-      <span class="field-feedback" style="display: none;">To submit this form, please consent to being contacted </span>
 
       <button id = 'form-button'>Submit</button>
     </form>
