Added success message

--- a/index.html
+++ b/index.html
@@ -66,8 +66,10 @@
   </div>
 
 
-  <!-- Message Sent!
-  Thanks for completing the form. We'll be in touch soon! -->
+  <div class="success-alert">
+    <span class="heading"><img alt = '' src ="./assets/images/icon-success-check.svg"> Message Sent!</span>
+    <span>Thanks for completing the form. We'll be in touch soon!</span>
+  </div>
 
   <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>.
