--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
 
 
   <div class="success-alert">
-    <span class="heading"><img alt = '' src ="./assets/images/icon-success-check.svg"> Message Sent!</span>
+    <span class="heading"><img alt = '' src ="./assets/images/icon-success-check.svg"> Message Sent!</span><br>
     <span>Thanks for completing the form. We'll be in touch soon!</span>
   </div>
 
-  <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io/challenges/contact-form--G-hYlqKJj" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://github.com/Justinjovert/" target="_blank">Justin Jovert A.</a>.
+  </div>
 </body>
 
 </html>
