--- a/index.html
+++ b/index.html
@@ -24,27 +24,27 @@
       <div class="names-wrapper">
         <div class ='names'>
           <label for="firstName">First Name &nbsp*</label>
-          <input type="text" id="firstName" name="firstName">
+          <input type="text" id="firstName" name="firstName" tabindex="1">
         </div>
 
         <div class="names">
           <label for="lastName">Last Name &nbsp*</label>
-          <input type="text" id="lastName" name="lastName">
+          <input type="text" id="lastName" name="lastName" tabindex="2">
         </div>
       </div>
 
       <label for="email">Email Address &nbsp*</label>
-      <input type="email" id="email" name="email">
+      <input type="email" id="email" name="email" tabindex="3">
 
       <label>Query Type &nbsp*</label>
       <div class = 'query-wrapper'>
-        <label for="option1" class = 'query-option' tabindex="1">
-          <input type="radio" id="option1" name="queryType" value="General Enquiry">
+        <label for="option1" class = 'query-option' >
+          <input type="radio" id="option1" name="queryType" value="General Enquiry" tabindex="4">
           &nbsp&nbsp&nbspGeneral Enquiry
         </label>
 
-        <label for="option2" class = 'query-option' tabindex="2">
-          <input type="radio" id="option2" name="queryType" value="Support Request">
+        <label for="option2" class = 'query-option' >
+          <input type="radio" id="option2" name="queryType" value="Support Request" tabindex="5">
           &nbsp&nbsp&nbspSupport Request
         </label>
       </div>
@@ -52,16 +52,16 @@
 
       <div class="message-wrapper">
         <label for="message">Message &nbsp*</label>
-        <textarea type='text' cols= "30" rows= "4" id="message" name="message" placeholder="Type your message here..."></textarea>
+        <textarea tabindex="6" type='text' cols= "30" rows= "4" id="message" name="message" placeholder="Type your message here..."></textarea>
       </div>
 
 
       <div class="agreement">
-        <input type="checkbox" id="consent" name="consent">
+        <input type="checkbox" id="consent" name="consent" tabindex="7">
         <label for="consent">I consent to being contacted by the team &nbsp*</label>
       </div>
 
-      <button id = 'form-button'>Submit</button>
+      <button id = 'form-button'>Submit</button tabindex="8">
     </form>
   </div>
 
